# l2d2

./: .gitignore  Cargo.toml  README.md  attempt.py  float_helpers.py  ingest.py  ingest_main.py  ingest_sampler.py  options.py  preprocess.py  pytest.ini  requirements.txt  setup.py
docs/: efficiency.md
l2d2/: attempt.py  common.py  ingest.py  ingest_main.py  ingest_sampler.py  length_model.py  options.py  plotter.py  preprocess.py  ptmodel.py  sampler.py  xtrie_test.py  zoo.py
src/: asm_parser.rs  fp_compress.rs  lib.rs  trie.rs  trie_sampler.rs
