[package]
name = "xtrie"
version = "0.1.0"
authors = ["Chris Leary <cdleary@gmail.com>"]
edition = "2018"

[lib]
name = "xtrie"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.2.1" }
rand = { version = "0.7.2" }

[dependencies.pyo3]
version = "0.10.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
